# RenderEngine

./: CMakeLists.txt  README.md  renderdoc.cap
assets/meshes/: blender_monkey.blend  blender_monkey.mtl
include/: FileInput.h
include/fileutils/: FileInput.h  MeshParser.h
include/rendering/: Camera.h  InstanceManager.h  MeshObject.h  ShaderProgram.h  ShaderStorageBuffer.h  Texture.h  TextureBehaviour.h  Window.h
include/stdextentions/: StringUtils.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/fileutils/: FileInput.cpp  MeshParser.cpp
src/rendering/: Camera.cpp  InstanceManager.cpp  MeshObject.cpp  MeshObject.inc  ShaderProgram.cpp  ShaderStorageBuffer.cpp  Texture.cpp  Window.cpp
src/shaders/: fragment.glsl  lightsource_fragment.glsl  lightsource_vertex.glsl  phong_fragment.glsl  phong_vertex.glsl  vertex.glsl
src/stdextentions/: StringUtils.cpp
